--- a/build.gradle
+++ b/build.gradle
@@ -47,5 +47,6 @@ tasks.withType(Test) {
     systemProperties(System.getProperties())
     useJUnitPlatform({
         includeTags(System.getProperty("tag", "regression"))
+        includeTags(System.getProperty("tag", "step"))
     })
 }
