--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ tasks.withType(Test) {
     systemProperties(System.getProperties())
     useJUnitPlatform({
         includeTags(System.getProperty("tag", "regression"))
+        includeTags(System.getProperty("tag", "smoke"))
         includeTags(System.getProperty("tag", "step"))
+        includeTags(System.getProperty("tag", "negative"))
     })
 }
